--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shoppinglist Assitant for Snips.ai, integrated in Todoist",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,9 @@
   "dependencies": {
     "hermes-javascript": "^0.3.12",
     "ini": "^1.3.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "jest": "^24.8.0"
   }
 }
