--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "hermes-javascript": "^0.3.12",
     "ini": "^1.3.5",
+    "lodash.debounce": "^4.0.8",
     "node-fetch": "^2.6.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^7.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
